# sklearndf

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  README.rst  RELEASE_NOTES.rst  azure-pipelines.yml  dev-setup.sh  environment.yml  flake8.ini  mypy.ini  pypi_description.rst  pyproject.toml  setup.py  tox.ini
conda-build/: meta.yaml
condabuild/: meta.yaml
docs/: api_landing.html  contribution_guide.html  faqs.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  tutorials.html
docs/_generated/: getting_started.html  release_notes.html
docs/_modules/: index.html
docs/_modules/pytools/fit/: _fit.html
docs/_modules/sklearn/: naive_bayes.html  pipeline.html
docs/_modules/sklearn/decomposition/: _factor_analysis.html  _lda.html
docs/_modules/sklearn/ensemble/: _gb.html  _voting.html  _weight_boosting.html
docs/_modules/sklearn/feature_extraction/: _dict_vectorizer.html  text.html
docs/_modules/sklearn/gaussian_process/: _gpc.html
docs/_modules/sklearn/neural_network/: _rbm.html
docs/_modules/sklearn/preprocessing/: _encoders.html
docs/_modules/sklearndf/: _sklearndf.html
docs/_sources/: faqs.rst.txt  tutorials.rst.txt
docs/_sources/_generated/: getting_started.rst.txt  release_notes.rst.txt
docs/_sources/apidoc/: sklearndf.rst.txt
docs/_sources/getting_started/: getting_started.rst.txt
docs/_static/js/: versions.js
docs/apidoc/: sklearndf.html
docs/apidoc/sklearndf/: sklearndf.ClassifierDF.html  sklearndf.ClusterDF.html  sklearndf.EstimatorDF.html  sklearndf.LearnerDF.html  sklearndf.RegressorDF.html  sklearndf.SupervisedLearnerDF.html  sklearndf.TransformerDF.html  sklearndf.classification.html  sklearndf.clustering.html  sklearndf.pipeline.html  sklearndf.regression.html  sklearndf.transformation.html  sklearndf.wrapper.html
docs/docs-version/1-0/: api_landing.html  faqs.html  objects.inv
docs/docs-version/1-0-0/: .buildinfo  contribution_guide.html  genindex.html  index.html  tutorials.html
docs/docs-version/1-0-1/: .buildinfo  contribution_guide.html  faqs.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/docs-version/1-0-2/: genindex.html  py-modindex.html  searchindex.js  tutorials.html
docs/docs-version/1-1/: genindex.html  py-modindex.html  searchindex.js
docs/docs-version/1-1-0/: objects.inv  release_notes.html  searchindex.js
docs/docs-version/1-1-0rc0/: faqs.html  genindex.html  index.html  objects.inv  searchindex.js
docs/docs-version/1-1-1/: api_landing.html  objects.inv  release_notes.html  searchindex.js
docs/docs-version/1-1-2/: api_landing.html  objects.inv  release_notes.html  searchindex.js
docs/docs-version/1-1-3/: contribution_guide.html  objects.inv  release_notes.html  search.html  tutorials.html
docs/docs-version/1-2/: .buildinfo  contribution_guide.html  faqs.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  tutorials.html
docs/docs-version/1-2-0/: .buildinfo  api_landing.html  contribution_guide.html  objects.inv
docs/docs-version/1-2-0rc0/: genindex.html  objects.inv  release_notes.html  searchindex.js
docs/docs-version/1-2-1/: faqs.html  genindex.html  objects.inv  release_notes.html  searchindex.js
docs/docs-version/1-2-2/: objects.inv  release_notes.html  searchindex.js
docs/docs-version/2-0/: api_landing.html  contribution_guide.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/docs-version/2-0-dev0/: api_landing.html  objects.inv
docs/docs-version/2-0-dev1/: .buildinfo  contribution_guide.html  faqs.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  tutorials.html
docs/docs-version/2-0-dev3/: .buildinfo  contribution_guide.html  faqs.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  tutorials.html
docs/docs-version/2-1/: api_landing.html  genindex.html  objects.inv  search.html
docs/docs-version/2-2/: .buildinfo  api_landing.html  faqs.html  genindex.html  objects.inv  searchindex.js  tutorials.html
docs/docs-version/2-3/: api_landing.html  contribution_guide.html  genindex.html  objects.inv
docs/getting_started/: getting_started.html
docs/tutorial/: sklearndf_tutorial.html
sphinx/: Makefile  make.bat  make.py
sphinx/auxiliary/: Titanic_getting_started_example.ipynb
sphinx/source/: api_docs.rst  api_landing.rst  conf.py  contribution_guide.rst  examples.rst  faqs.rst  index.rst  tutorials.rst
sphinx/source/_templates/: autosummary.rst
sphinx/source/tutorial/: sklearndf_tutorial.ipynb
src/gamma/: __init__.py
src/gamma/sklearndf/: __init__.py  _sklearndf.py  _wrapper.py  classification.py  regression.py  wrapper.py
src/sklearndf/: __init__.py  _sklearn_version.py  _sklearndf.py  _util.py  _version.py  _wrapper.py
src/sklearndf/classification/: __init__.py  _classification.py  _classification_v0_22.py  _classification_v0_23.py  _classification_v1_0.py
src/sklearndf/clustering/: __init__.py  _clustering.py  _clustering_v1_1.py  _clustering_v1_3.py
src/sklearndf/pipeline/: __init__.py  _learner_pipeline.py  _pipeline.py
src/sklearndf/regression/: __init__.py  _regression.py  _regression_v0_22.py  _regression_v0_23.py  _regression_v1_0.py
src/sklearndf/transformation/: __init__.py  _transformation.py  _transformation_v0_22.py  _transformation_v0_23.py  _transformation_v0_24.py  _transformation_v1_0.py  _transformation_v1_1.py  _transformation_v1_3.py  _wrapper.py
src/sklearndf/wrapper/: __init__.py  _adapter.py  _missing.py  _wrapper.py
test/test/: __init__.py  conftest.py  paths.py  test_docs.py
test/test/sklearndf/: __init__.py  test_base.py  test_classification.py  test_clustering.py  test_meta_estimators.py  test_missing.py  test_package_version.py  test_pipeline_df.py  test_regression.py  test_sklearn_coverage.py
(+5546 files in other folders)
