[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache"]

[tool.flit.metadata]
module = "sklearndf"
author = "Boston Consulting Group (BCG)"
home-page = "https://github.com/BCG-Gamma/sklearndf"
description-file = "pypi_description.rst"
dist-name = "sklearndf"
license = "Apache Software License v2.0"

requires = [
    "boruta         ~=0.3",
    "gamma-pytools  ~=1.2,>=1.2.1",
    "lightgbm       ~=3.0",
    "numpy          >=1.16,<2a",  # cannot use ~= due to conda bug
    "packaging      >=20",
    "pandas         >=0.24,<2a",  # cannot use ~= due to conda bug
    "scikit-learn   >=0.21,<0.25a",
    "scipy          ~=1.2",
]

requires-python = ">=3.6,<4a"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.requires-extra]
testing = [
    "pytest ~= 5.2",
    "pytest-cov ~= 2.8",
    "flake8 ~= 3.8",
    "flake8-comprehensions ~= 3.2",
    "isort ~= 5.5",
]
docs = [
    "sphinx ~= 3.4.0",
    "sphinx-autodoc-typehints ~= 1.11.0",
    "pydata-sphinx-theme ~= 0.4.0",
    "jinja2 ~= 2.11",
    "nbsphinx ~= 0.7.1",
    "jupyter ~= 1.0",
    "docutils ~= 0.16.0",
    "xlrd ~= 1.2",
    "m2r ~= 0.2.0"
]

[tool.flit.metadata.urls]
Documentation = "https://bcg-gamma.github.io/sklearndf/"
Repository = "https://github.com/BCG-Gamma/sklearndf"

[build.matrix.min]
# direct requirements of sklearndf
boruta         = "~=0.3.0"
gamma-pytools  = "~=1.2.1"
lightgbm       = "~=3.0.0"
numpy          = "==1.16.6"  # cannot use ~= due to conda bug
pandas         = "~=0.24.2"
packaging      = "~=20.9"
python         = ">=3.6.15,<3.7a"    # cannot use ~= due to conda bug
scikit-learn   = "~=0.21.0"
scipy          = "~=1.2.1"
# additional minimum requirements of gamma-pytools
joblib         = "~=0.14.0"
matplotlib     = "~=3.0.3"
typing_inspect = "~=0.4.0"

[build.matrix.max]
# direct requirements of sklearndf
boruta         = "~=0.3"
gamma-pytools  = "~=1.2,>=1.2.1"
lightgbm       = "~=3.2"
numpy          = ">=1.20,<2a"  # cannot use ~= due to conda bug
packaging      = ">=20"
pandas         = "~=1.4"
python         = ">=3.8,<4a"   # cannot use ~= due to conda bug
scikit-learn   = "~=0.24.2"
scipy          = "~=1.6"
# additional maximum requirements of gamma-pytools
joblib         = "~=1.0"
matplotlib     = "~=3.4"
typing_inspect = "~=0.7"

[tool.black]
# quiet = "True"
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | docs
    | notebooks
    | sphinx
  )/
)
'''
