[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache"]

[tool.flit.metadata]
module = "sklearndf"
author = "Boston Consulting Group (BCG)"
home-page = "https://github.com/BCG-Gamma/sklearndf"
description-file = "pypi_description.rst"
dist-name = "sklearndf"
license = "Apache Software License v2.0"

requires = [
    "gamma-pytools  ~=2.0,!=2.0.0",
    "numpy          >=1.21,<2a",  # cannot use ~= due to conda bug
    "packaging      >=20",
    "pandas         >=1,<2a",  # cannot use ~= due to conda bug
    "scikit-learn   >=0.21,<1.2a",
    "scipy          ~=1.4",
]

requires-python = ">=3.7,<4a"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.requires-extra]
testing = [
    "boruta ~=0.3",
    "lightgbm ~= 3.3",
    "pytest ~= 7.1",
    "pytest-cov ~= 2.8",
    "xgboost ~= 1.5",
]
docs = [
    "sphinx ~= 4.5",
    "sphinx-autodoc-typehints ~= 1.19",
    "pydata-sphinx-theme ~= 0.8.1",
    "jinja2 ~= 2.11",
    "nbsphinx ~= 0.8.9",
    "jupyter == 1",
    "docutils ~= 0.17",
    "xlrd ~= 1.2",
    "m2r ~= 0.2"
]

[tool.flit.metadata.urls]
Documentation = "https://bcg-gamma.github.io/sklearndf/"
Repository = "https://github.com/BCG-Gamma/sklearndf"

[build]
# comma-separated list of packages to be built from source in pip min builds
no-binary.min = ["matplotlib"]

[build.matrix.min]
# direct requirements of sklearndf
boruta         = "~=0.3.0"
gamma-pytools  = "~=2.0.1"
lightgbm       = "~=3.0.0"
numpy          = "==1.21.6"  # cannot use ~= due to conda bug
packaging      = "~=20.9"
pandas         = "~=1.0.5"
python         = ">=3.7.12,<3.8a"    # cannot use ~= due to conda bug
scipy          = "~=1.4.1"
scikit-learn   = "~=0.21.3"
xgboost        = "~=1.0.2"
# additional minimum requirements of gamma-pytools
joblib         = "~=0.14.1"
matplotlib     = "~=3.0.3"
typing_inspect = "~=0.4.0"

[build.matrix.max]
# direct requirements of sklearndf
boruta         = "~=0.3"
gamma-pytools  = "~=2.0,!=2.0.0"
lightgbm       = "~=3.3"
numpy          = ">=1.23,<2a"  # cannot use ~= due to conda bug
packaging      = ">=20"
pandas         = "~=1.4"
python         = ">=3.9,<4a"   # cannot use ~= due to conda bug
scikit-learn   = "~=1.1.2"
scipy          = "~=1.8"
xgboost        = "~=1.5"
# additional maximum requirements of gamma-pytools
joblib         = "~=1.1"
matplotlib     = "~=3.5"
typing_inspect = "~=0.7"

[tool.black]
# quiet = "True"
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | docs
    | notebooks
    | sphinx
  )/
)
'''
